Project xuehua_store {
  database_type: "SQLite"
  Note: "a artifact/package store for Xuěhuā"
}

// helpers
TablePartial include_time {
  created_at integer [default: `unixepoch()`]
}

TablePartial include_artifact {
  artifact blob [not null, ref: > artifacts.hash]
}

TablePartial include_package {
  package blob [not null, ref: > packages.hash]
}

// artifacts
Table artifacts {
  hash blob [primary key, not null]
  ~include_time
  Note: "a content-addressed build artifact"
}

// packages
Table packages {
  hash blob [primary key, not null]
  ~include_artifact
  ~include_time
  Note: "a pointer from a package manifest to an artifact"
}

// operation log
enum operation_type {
  link
  unlink
}

Table operations {
  generation integer [primary key, not null, increment]
  type operation_type [not null]
  ~include_package
  ~include_time
  Note: "a record in the append-only log of link/unlink operations"
}
